--- a/IMC.html
+++ b/IMC.html
@@ -16,17 +16,31 @@
 		puloLinha()
 		}
 	function calculaImc(altura, peso) {
-		var imc = peso / (altura * altura);
-		return imc;
-	}
+		return peso / (altura * altura);
+		}
 
-	var imcNielly = calculaImc(1.68, 65)
-	var imcMallaro = calculaImc(1.70,55)
+	var nome = prompt("Informe seu nome: ")
+	var alturaInformada = prompt(nome+' informe sua altura:')
+	var pesoInformado = prompt(nome+" informe seu peso: ")
+	var imc = calculaImc(alturaInformada, pesoInformado)
+	document.write(nome + " o seu IMC calculado é "+imc)
+	if(imc > 30) {
 
-	mostra ("O IMC é " + imcNielly)
+		mostra(" Você está acima do peso.");
+
+		}
+
+		if(imc < 18.5) {
+
+		mostra(" Você está abaixo do peso ideal e precisa ganhar peso.");
+		}
+
+		if(imc > 18.5 < 35) {
+
+		mostra(" Você está dentro do peso ideal.");
+		}		
 	</script>
 	
-<p>Classificação Normal é entre 18,5 e 24,9.</p>
-	<p>Obesidade grau 0</p>
+
 </body>
 </html>
