--- a/adivinha.html
+++ b/adivinha.html
@@ -15,15 +15,18 @@
 		document.write(frase);
 		puloLinha()
 		}
-		function sorteia(n){
+		var tentativas = 3
+while(tentativas <=3){
+	function sorteia(n){
 			return Math.round(Math.random() * n);
 		}
 		var numeroPensado = sorteia(10)
 		var chute = parseInt(prompt('Adivinhe um número de 1 a 10!'))
 		if (chute==numeroPensado){
-			mostra('Você acertou!!')
-		}else{mostra('Você errou!! O número pensado foi '+numeroPensado)}
-				
+			mostra('Você acertou, o numero pensado era '+numeroPensado);break;
+		}else{mostra('Você errou!!')}
+		tentativas++
+}		
 	</script>
 	
 
