--- a/Lógica de programação 1 e 2/Logica 2/Fração.html
+++ b/Lógica de programação 1 e 2/Logica 2/Fração.html
@@ -20,15 +20,30 @@
         pincel.strokeRect(x,y,50,50)
         }
     var x = 0;
-    while(x<600){
-       desenhaQuadrado(x,0, 'blueviolet');
-       desenhaQuadrado(x,50, 'purple');
-       desenhaQuadrado(x,100,'deeppink');
-       x = x+50;
- }
- for (var x = 0; x < 600; x = x+50){
+
+ 
+ for (var x = 0; x < 200; x = x+50){
     desenhaQuadrado(x,150,'fuchsia');
+    desenhaQuadrado(150,150,'white')
  }
+ function desenhaTexto(texto, x , y) {
+        var tela = document.querySelector('canvas');
+        var pincel = tela.getContext('2d');
+
+        pincel.font='20px Georgia';
+        pincel.fillStyle='black';
+        pincel.fillText(texto, x, y);    
+    }
+
+
+    desenhaTexto("Qual é a fração?", 50, 30);
+
+    var y = 50;
+    desenhaQuadrado(50, y, 100, 'green');
+    desenhaQuadrado(150, y, 100, 'green');
+    desenhaQuadrado(250, y, 100, 'green');
+    desenhaQuadrado(350, y, 100, 'white');
+
 
     </script>
     
